--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-    Overflow by HTML5 UP
-    html5up.net | @ajlkn
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Drop by apehex
+    https://github.com/apehex
+    Free for personal and commercial use under the CCA 4.0 license
 -->
 <html>
     
