--- a/_sass/noscript.scss
+++ b/_sass/noscript.scss
@@ -6,9 +6,9 @@
 @import 'libs/html-grid';
 
 /*
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Drop by apehex
+	https://github.com/apehex
+	Free for personal and commercial use under the CCA 4.0 license
 */
 
 /* Header */
