Update the credits

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,8 @@
     <div class="copyright">
         <ul class="menu">
             <li>&copy; {{ site.title }} {{ site.subtitle }}. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+            <li>Design: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
+            <li>Inspired by: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
             <li>Jekyll integration: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
         </ul>
     </div>
