Improve writing a bit

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <!-- Banner -->
 <section id="banner">
     <header>
-        <h2>This is Drop</h2>
+        <h2>This is DROP</h2>
     </header>
     <p>A brand new site template designed by <a href="{{ site.email }}">DM</a> for <a href="https://github.com/apehex">apehex</a>.<br />
     It’s responsive, built on HTML5/CSS3, and entirely free<br />
