--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,6 @@
         {% if site.twitter_url %}
         <li><a href="{{ site.twitter_url }}" class="icon alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
         {% endif %}
-        {% if site.googleplus_url %}
-        <li><a href="{{ site.googleplus_url }}" class="icon alt fa-google-plus" target="_blank"><span class="label">Google+</span></a></li>
-        {% endif %}
         {% if site.facebook_url %}
         <li><a href="{{ site.facebook_url }}" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
         {% endif %}
@@ -34,10 +31,9 @@
     </ul>
     <div class="copyright">
         <ul class="menu">
-            <li>&copy; {{ site.title }} {{ site.subtitle }}. All rights reserved.</li>
+            <li>&copy; {{ site.title }}. All rights reserved.</li>
             <li>Design: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
             <li>Inspired by: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-            <li>Jekyll integration: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
         </ul>
     </div>
 </section>
