Use site variables to fill the text in common elements

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,11 +1,9 @@
 <!-- Banner -->
 <section id="banner">
     <header>
-        <h2>This is DROP</h2>
+        <h2>{{ site.title }}</h2>
     </header>
-    <p>A brand new site template designed by <a href="{{ site.email }}">DM</a> for <a href="https://github.com/apehex">apehex</a>.<br />
-    It’s responsive, built on HTML5/CSS3, and entirely free<br />
-    under the <a href="https://github.com/apehex/jekyll-theme-drop/blob/master/LICENSE">Creative Commons license</a>.</p>
+    <p>{{ site.description }}</p>
     <footer>
         <a href="#first" class="button style2 scrolly">Act on this message</a>
     </footer>
