Specify the page language in the meta tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,11 @@
 
 <!DOCTYPE HTML>
 <!--
-    Drop by apehex
+    Drop theme by apehex
     https://github.com/apehex
     Free for personal and commercial use under the CCA 4.0 license
 -->
-<html>
+<html lang="{{ lang }}">
     
     {% include head.html title=title subtitle=subtitle %}
 
